added nav bar and aligned to top horizontally

--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <header>
+        <nav class:"nav">
+            <div class="top-left">
+                <a href="#">About</a>
+                <a href="#">Store</a>
+            </div>
+            <div class="top-right">
+                <a href="#">Gmail</a>
+                <a href="#">Images</a>
+                <button>
+                    <img
+                      class="apps"
+                      src="images/apps.png" 
+                    >
+                </button>
+                <a href="https://github.com/DavePerera" class="avatar">
+                    <img src="images/avatar.jfif">
+                </a>
+            </div>
+        </nav>
+    </header>
     <main>
         
             <img 
@@ -19,14 +40,12 @@
             <img 
               class="search-icon"
               src="images/outline_search_black_24dp.png"
-              alt=""
             >
             <input class="search-input" type="text">
             <button>
                 <img
                   class="mic"
                   src="images/outline_mic_black_24dp.png"
-                  alt=""
                 >
             </button>
         </div>
