added footer and aligned to bottom horizontally

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <nav class:"nav">
+        <nav>
             <div class="top-left">
                 <a href="#">About</a>
                 <a href="#">Store</a>
@@ -56,6 +56,20 @@
             </div>
         </div>
     </main>
+    <footer>
+        <nav>
+            <div class="bottom-left">
+                <a href="#">Advertising</a>
+                <a href="#">Business</a>
+                <a href="#">How Search works</a>
+            </div>
+            <div class="bottom-right">
+                <a href="#">Privacy</a>
+                <a href="#">Terms</a>
+                <a href="#">Settings</a>
+            </div>
+        </nav>
+    </footer>
     
 </body>
 </html>
